# lab-osm

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  vcpkg.json
cmake/: FindOsmium.cmake  FindProtozero.cmake
src/: CMakeLists.txt  graph.cpp  graph.h  graph_creator.cpp  graph_creator.h  helper.h  main.cpp  server.cpp  server.h  stb_image.h
src/sublibrary/: CMakeLists.txt
static/: index.html  index.js
